# codeclean

./: README.md  code_cleaner.py  example.py  install.sh  publish.sh  pyproject.toml  setup.py
codecleaner/: __init__.py  __main__.py
pycodeclean/: __init__.py  cli.py  core.py
pycodeclean.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
